// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/Document/OfferingLetter/Create/elements/ServiceSpecification/elements/ListService/index render 1`] = `
<React.Fragment>
  <Styled(MuiBox)
    pb={4}
  >
    <Numbering
      alignItems="flex-start"
      data={
        <Styled(MuiBox)
          pt={1}
        >
          <WithStyles(ForwardRef(Grid))
            container={true}
            justifyContent="space-between"
            spacing={2}
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="h5"
                weight="medium"
              >
                test
              </Typography>
              <Styled(MuiBox)
                component="span"
                ml={2}
              >
                <Typography
                  className=""
                  color="inherit"
                  inline={false}
                  variant="h5"
                  weight="medium"
                >
                  (SLG 
                  10
                  %)
                </Typography>
              </Styled(MuiBox)>
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
            >
              <ButtonMinimal
                label="delete service"
                loading={false}
                onClick={[Function]}
                type="ghost"
                variant="delete"
              />
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
          <React.Fragment>
            <Styled(MuiBox)
              pb={3}
            >
              <WithStyles(ForwardRef(Grid))
                container={true}
                spacing={2}
              >
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={7}
                >
                  <WithStyles(ForwardRef(Grid))
                    container={true}
                    spacing={2}
                  >
                    <WithStyles(ForwardRef(Grid))
                      item={true}
                      xs={true}
                    >
                      <Typography
                        className=""
                        color="general-main"
                        inline={false}
                        variant="subtitle2"
                        weight="medium"
                      >
                        TEST
                      </Typography>
                    </WithStyles(ForwardRef(Grid))>
                  </WithStyles(ForwardRef(Grid))>
                </WithStyles(ForwardRef(Grid))>
                <React.Fragment>
                  <WithStyles(ForwardRef(Grid))
                    item={true}
                    xs={2}
                  >
                    <Typography
                      className=""
                      color="primary-main"
                      inline={false}
                      variant="subtitle2"
                      weight="medium"
                    >
                      ONE TIME CHARGE
                    </Typography>
                  </WithStyles(ForwardRef(Grid))>
                  <WithStyles(ForwardRef(Grid))
                    item={true}
                    xs={3}
                  >
                    <Typography
                      className=""
                      color="primary-main"
                      inline={false}
                      variant="subtitle2"
                      weight="medium"
                    >
                      MONTHLY RECURRING CHARGE
                    </Typography>
                  </WithStyles(ForwardRef(Grid))>
                </React.Fragment>
              </WithStyles(ForwardRef(Grid))>
            </Styled(MuiBox)>
            <Styled(MuiBox)>
              <WithStyles(ForwardRef(Grid))
                container={true}
                spacing={2}
              >
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={7}
                >
                  <WithStyles(ForwardRef(Grid))
                    container={true}
                    spacing={2}
                  >
                    <WithStyles(ForwardRef(Grid))
                      item={true}
                      xs={true}
                    >
                      <Typography
                        className=""
                        color="general-mid"
                        inline={false}
                        variant="subtitle1"
                        weight="normal"
                      >
                        test
                      </Typography>
                    </WithStyles(ForwardRef(Grid))>
                  </WithStyles(ForwardRef(Grid))>
                </WithStyles(ForwardRef(Grid))>
                <React.Fragment>
                  <WithStyles(ForwardRef(Grid))
                    item={true}
                    xs={2}
                  >
                    <Typography
                      className=""
                      color="primary-main"
                      inline={false}
                      variant="subtitle1"
                      weight="normal"
                    >
                      Rp 1.000
                    </Typography>
                  </WithStyles(ForwardRef(Grid))>
                  <WithStyles(ForwardRef(Grid))
                    item={true}
                    xs={2}
                  >
                    <Typography
                      className=""
                      color="primary-main"
                      inline={false}
                      variant="subtitle1"
                      weight="normal"
                    >
                      Rp 1.000
                    </Typography>
                  </WithStyles(ForwardRef(Grid))>
                </React.Fragment>
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={1}
                >
                  <Styled(MuiBox)
                    display="flex"
                    mt={-1}
                  >
                    <ButtonMinimal
                      label=""
                      loading={false}
                      onClick={[Function]}
                      type="ghost"
                      variant="pencil"
                    />
                    <ButtonMinimal
                      label=""
                      loading={false}
                      onClick={[Function]}
                      type="ghost"
                      variant="trash"
                    />
                  </Styled(MuiBox)>
                </WithStyles(ForwardRef(Grid))>
              </WithStyles(ForwardRef(Grid))>
            </Styled(MuiBox)>
          </React.Fragment>
          <Styled(MuiBox)
            alignItems="center"
            display="flex"
            mt={3}
          >
            <div />
            <ButtonMinimal
              label="add location"
              loading={false}
              onClick={[Function]}
              type="ghost"
              variant="add"
            />
          </Styled(MuiBox)>
        </Styled(MuiBox)>
      }
      number={1}
      schema={Array []}
      size="default"
    />
  </Styled(MuiBox)>
  <WithStyles(ForwardRef(Grid))
    container={true}
    justifyContent="center"
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        TOTAL TARIF
      </Typography>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Typography
        className=""
        color="primary-main"
        inline={false}
        variant="h4"
        weight="medium"
      >
        Rp 10
      </Typography>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <Styled(MuiBox)
    my={5}
  >
    <WithStyles(ForwardRef(Divider)) />
  </Styled(MuiBox)>
</React.Fragment>
`;

exports[`src/containers/Document/OfferingLetter/Create/elements/ServiceSpecification/elements/ListService/index render productParam non CNDC 1`] = `
<React.Fragment>
  <Styled(MuiBox)
    pb={4}
  >
    <Numbering
      alignItems="flex-start"
      data={
        <Styled(MuiBox)
          pt={1}
        >
          <WithStyles(ForwardRef(Grid))
            container={true}
            justifyContent="space-between"
            spacing={2}
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="h5"
                weight="medium"
              >
                test
              </Typography>
              <Styled(MuiBox)
                component="span"
                ml={2}
              >
                <Typography
                  className=""
                  color="inherit"
                  inline={false}
                  variant="h5"
                  weight="medium"
                >
                  (SLG 
                  10
                  %)
                </Typography>
              </Styled(MuiBox)>
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
            >
              <ButtonMinimal
                label="delete service"
                loading={false}
                onClick={[Function]}
                type="ghost"
                variant="delete"
              />
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
          <React.Fragment>
            <Styled(MuiBox)
              pb={3}
            >
              <WithStyles(ForwardRef(Grid))
                container={true}
                spacing={2}
              >
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={9}
                >
                  <WithStyles(ForwardRef(Grid))
                    container={true}
                    spacing={2}
                  >
                    <WithStyles(ForwardRef(Grid))
                      item={true}
                      xs={true}
                    >
                      <Typography
                        className=""
                        color="general-main"
                        inline={false}
                        variant="subtitle2"
                        weight="medium"
                      >
                        TEST
                      </Typography>
                    </WithStyles(ForwardRef(Grid))>
                  </WithStyles(ForwardRef(Grid))>
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={3}
                >
                  <Typography
                    className=""
                    color="primary-main"
                    inline={false}
                    variant="subtitle2"
                    weight="medium"
                  >
                    TOTAL
                  </Typography>
                </WithStyles(ForwardRef(Grid))>
              </WithStyles(ForwardRef(Grid))>
            </Styled(MuiBox)>
            <Styled(MuiBox)>
              <WithStyles(ForwardRef(Grid))
                container={true}
                spacing={2}
              >
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={9}
                >
                  <WithStyles(ForwardRef(Grid))
                    container={true}
                    spacing={2}
                  >
                    <WithStyles(ForwardRef(Grid))
                      item={true}
                      xs={true}
                    >
                      <Typography
                        className=""
                        color="general-mid"
                        inline={false}
                        variant="subtitle1"
                        weight="normal"
                      >
                        test
                      </Typography>
                    </WithStyles(ForwardRef(Grid))>
                  </WithStyles(ForwardRef(Grid))>
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={2}
                >
                  <Typography
                    className=""
                    color="primary-main"
                    inline={false}
                    variant="subtitle1"
                    weight="normal"
                  >
                    Rp 2.000
                  </Typography>
                </WithStyles(ForwardRef(Grid))>
                <WithStyles(ForwardRef(Grid))
                  item={true}
                  xs={1}
                >
                  <Styled(MuiBox)
                    display="flex"
                    mt={-1}
                  >
                    <ButtonMinimal
                      label=""
                      loading={false}
                      onClick={[Function]}
                      type="ghost"
                      variant="pencil"
                    />
                    <ButtonMinimal
                      label=""
                      loading={false}
                      onClick={[Function]}
                      type="ghost"
                      variant="trash"
                    />
                  </Styled(MuiBox)>
                </WithStyles(ForwardRef(Grid))>
              </WithStyles(ForwardRef(Grid))>
            </Styled(MuiBox)>
          </React.Fragment>
          <Styled(MuiBox)
            alignItems="center"
            display="flex"
            mt={3}
          >
            <div />
            <ButtonMinimal
              label="add location"
              loading={false}
              onClick={[Function]}
              type="ghost"
              variant="add"
            />
          </Styled(MuiBox)>
        </Styled(MuiBox)>
      }
      number={1}
      schema={Array []}
      size="default"
    />
  </Styled(MuiBox)>
  <WithStyles(ForwardRef(Grid))
    container={true}
    justifyContent="center"
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        TOTAL TARIF
      </Typography>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Typography
        className=""
        color="primary-main"
        inline={false}
        variant="h4"
        weight="medium"
      >
        Rp 10
      </Typography>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <Styled(MuiBox)
    my={5}
  >
    <WithStyles(ForwardRef(Divider)) />
  </Styled(MuiBox)>
</React.Fragment>
`;
